--- a/.gnupg/gpg.conf
+++ b/.gnupg/gpg.conf
@@ -1,3 +1,2 @@
 use-agent
-#keyserver hkps://hkps.pool.sks-keyservers.net
-#keyserver-options ca-cert-file=.ssh/sks-keyservers.netCA.pem
+keyserver hkps://hkps.pool.sks-keyservers.net:443
