--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,4 +1,6 @@
 enable-ssh-support
+allow-emacs-pinentry
+allow-loopback-pinentry
 pinentry-program /usr/bin/pinentry-tty
 max-cache-ttl 60480000
 default-cache-ttl 60480000
